--- a/sub_about.html
+++ b/sub_about.html
@@ -50,7 +50,7 @@
 <header id="header">
     <article class="inner">
         <div class="menu_bg"></div>
-        <h1><a href="index.html"><img src="images/common/gnb/logo.png" alt="로고"></a></h1>
+        <h1><a href="/"><img src="images/common/gnb/logo.png" alt="로고"></a></h1>
 
         <ul class="gnb clearfix">
             <li class="dropdown">
