--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="logo_b"><img src="images/main/logo_b.png" alt=""></div>
         <div class="arrow"><img src="images/common/arrow.png" alt=""></div>
 
-        <video src="images/mp4/main.mp4" autoplay muted loop></video>
+        <video src="images/mp4/main.mp4" autoplay muted loop playsinline></video>
 </header><!--header end-->
 
 
